# data-slack-bot

./: .gitignore  Dockerfile  README.md  app.py  docker-run.sh  pyproject.toml
.github/workflows/: ci.yaml  registry_retention_policy.yml
.github/workflows/actions/helm/: action.yml
deploy/slack_bot/: Chart.yaml  Chart.yaml   values.yaml
deploy/slack_bot/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  docker_secret.yaml  namespace.yaml  secrets.yaml  serviceaccount.yaml
slack_bot/: app.py  assistant.py  clickhouse.py  db.py  exceptions.py  helpers.py  open_assistant.py  pyproject.toml  run-tasks.sh  scenarios.py  utils.py  youtrack.py
slack_bot/data/: yt_projects.json
slack_bot/data/datasets/: sql_queries.csv
slack_bot/data/functions/: create_issue  run_query  run_query.json  send_sql_plan.json  send_sql_request.json  send_user_request.json
slack_bot/data/prompts/: clarification  developing  pay  sql_query_plan  testing  user_request_from_sql_plan
slack_bot/data/shots/: dump_users  dump_users.sql  users_part  users_part.sql
slack_bot/data/templates/: an  pay  sadm  yt
slack_bot/functions/: create_issue
slack_bot/metric_watch_interface/: airflow.py  constants.py  database.py  subscription_manager.py
slack_bot/pdp_assist/: slack_extract_web.py
slack_bot/prompt_generation_interface/: hyperskillai_api.py  prompts_generator.py
slack_bot/prompts/: clarification  developing  reviewing  testing
slack_bot/scripts/data_set_generation/: generate_plan_from_sql.py  generate_user_request_from_sql_plan.py
slack_bot/templates/: yt_issue
slack_bot/tests/: chat.py  open_assistant_test.py  sql_scenario.py
